test/testdata/classes/methods/static/property_accessors/read_only_assignment_error.lox
class Math {
  static get PI() {
    return 3;
  }
}

Math.PI = 2; // error: property 'PI' of 'Math class' object is read-only
